# v5-aead-decr-oracle

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
artifacts/: doc.aead.eax.254F954E84069003EE9B5EC66E5BDF982D32C130FEB84AB00B50D86EA79923C6.gpg  doc.aead.eax.small-chunks.C011D80E15FBBE3F0F94E55BF5B1279F909BE446A553061CFCEF3D645A00ED61.gpg  doc.aead.ocb.912249E8E24EA54E5E363191942C86DE9FADCC81B7101BD6C6B37DEDB61F150A.gpg  doc.aead.ocb.small-chunks-with-key-FFE671A89D964808EB47EB2D956EEF7B8EF5660D9425750ECC94038C8E7AC914-no-compression.gpg  doc.aead.ocb.small-chunks.8B521CB947276EEE8AC09EDD1A3B60A29A18ECAB9E5C48D40F1508914D3EC149.gpg
artifacts/sed-with-query-example/: longer-sed-lit.gpg  longer-sed-lit.gpg-no-rep  longer-sed-lit.hex  sed-with-query.md  session_key.txt  test-key.asc
src/: aead_packet.cpp  aead_packet.h  assert_util.h  bit_string.cpp  bit_string.h  blockcipher_blocks.cpp  blockcipher_blocks.h  cipher_block.h  detect_pattern.cpp  detect_pattern.h  eax_decr_oracle.cpp  eax_decr_oracle.h  eax_utils.cpp  eax_utils.h  except.cpp  except.h  file_util.cpp  file_util.h  generic_packet.cpp  generic_packet.h  lit_packet.cpp  lit_packet.h  main.cpp  ocb-detail.cpp  ocb-detail.h  ocb-oracle.cpp  ocb-oracle.h  opgp_cfb_decr_fun.h  opgp_cfb_decr_fun_simulation.cpp  opgp_cfb_decr_fun_simulation.h  packet.cpp  packet.h  poly_dbl.h  query_cfb_ct.cpp  query_cfb_ct.h  sed-oracle.cpp  sed-oracle.h  sedp.cpp  sedp.h  self-test.cpp  (+7 more)
